# tinylang

./: .gitignore  README.md  language.py  pyproject.toml  sweep.sh  train.py
.github/workflows/: python-tests.yml
experiments/: README.md
experiments/configs/: lstm.yaml  pcfg.yaml  pcfg_1_16_128.yaml  pcfg_1_1_128.yaml  pcfg_2_2_128.yaml  pcfg_2_2_128_nosibling.yaml  pcfg_3_2_128.yaml  pcfg_3_2_128_right.yaml  pcfg_3_2_16.yaml  pcfg_3_2_16_big.yaml  pcfg_3_2_16_right.yaml  pcfg_3_2_256.yaml  pcfg_3_2_256_right.yaml  pcfg_3_2_4.yaml  pcfg_3_2_4_right.yaml  pcfg_3_2_4yaml  pcfg_3_2_64.yaml  pcfg_3_2_64_right.yaml  pcfg_4_4_64_llama.yaml  pcfg_8_2_16.yaml  test.yaml  test_ar.yaml  test_new.yaml
languages/: README.md
languages/ar_train_test_split/: ar.yaml
languages/ar_value_first/: ar_32_value.yaml
languages/ar_vary_kv/: ar_1024.yaml  ar_128.yaml  ar_16.yaml  ar_256.yaml  ar_32.yaml  ar_512.yaml  ar_64.yaml  ar_8.yaml  make_sweep.py  template.yaml
languages/multihop/: make_sweep.py  multihop_no_parent.yaml  multihop_parent.yaml  template.yaml
languages/pcfg_easy_256/: pcfg_medium_256.yaml
languages/pcfg_medium_256/: pcfg_medium_256.yaml
languages/pcfg_medium_8192/: pcfg_medium_8192.yaml
languages/pcfg_vary_difficulty/: pcfg_5_20.yaml  pcfg_5_8192.yaml
languages/pcfg_vary_rhs/: pcfg_10.yaml  pcfg_15.yaml
languages/pcfg_vary_terminals/: 20.yaml  (+7 more)
notebooks/: Distance.ipynb  Languages.ipynb  Reverse.ipynb  Stats.ipynb  Sweep.ipynb  Untitled.ipynb  Untitled1.ipynb  Width.ipynb  gardenpath.ipynb  pcfg.ipynb  representations.ipynb  verb_arguments.ipynb
subspace/: Untitled.ipynb
tests/: test_pcfg.py
tinylang/: __init__.py  experiment.py  language.py  main.py  make_languages.py  train.py
(+4862 files in other folders)
