[project]
name = "tinylang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "calflops>=0.3.2",
    "editables>=0.5",
    "fvcore>=0.1.5.post20221221",
    "hatchling>=1.27.0",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib",
    "notebook>=7.3.2",
    "numpy",
    "opt-einsum>=3.4.0",
    "plotnine",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "pyvene",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "termcolor>=2.5.0",
    "torch>=2.5.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "umap-learn>=0.5.7",
    "wandb>=0.19.0",
    "zoology",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinylang"]

[tool.uv.sources]
zoology = { git = "https://github.com/aryamanarora/zoology.git" }
pyvene = { git = "https://github.com/stanfordnlp/pyvene.git" }

[project.scripts]
tinylang = "tinylang.main:main"
